--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
           Teachable Machine Pose Model
         </div>
         <div><canvas id="canvas"></canvas></div>
-        <div id="label-container">
-          <div>Hola</div>
-        </div>
+        <div id="label-container"></div>
         <div class="text-center py-5">
           <button
             type="button"
